@@ -20,7 +20,6 @@
       <!-- https://github.com/mockito/mockito/issues/3037 -->
       -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
       -Dfile.encoding=${project.build.sourceEncoding}
-      -Dnet.bytebuddy.experimental=true
       @${project.basedir}/argFile
     </argLine>
     <jacoco.skip>true</jacoco.skip> <!-- https://github.com/assertj/assertj/issues/3580 -->
@@ -249,9 +248,6 @@
         <configuration>
           <rules combine.children="append">
             <bannedDependencies>
-              <includes>
-                <include>net.bytebuddy:byte-buddy</include>
-              </includes>
               <excludes>
                 <exclude>org.assertj:assertj-core</exclude>
                 <exclude>org.hamcrest:hamcrest-core</exclude>
